2014-07-27  Per Bothner  <per@bothner.com>

	* SpecialObjectType.java: New class that extends ObjectType.
	Some properties moved from gnu.kawa.lispexpr.LangObjType.
	* Makefile.am: Update accordingly.
	* ObjectType.java (getImplementationType): No longer needed.
	* Type.java (nullType, toStringType): Now are SpecialObjectType.

2014-07-10  Per Bothner  <per@bothner.com>

	Fix for Savannah bug #42713: "MalformedParameterizedTypeException
	thrown when compiling".  Actually 2 fixes: (1) Make the call
	getGenericType lazy (2) don't addField if field is private.
	* Location.java (type): Make private.
	(getType): Make non-final.
	* CodeAttr.java: Update accordingly.
	* ClassTypeWriter.java: Likewise.
	* Field.java (getType): New override.  If we have a reflect-field
	and type is null, call getGenericType.
	* ClassType.java (addField(java.lang.reflect.Field)): Inline.
	(addFields): Inline here. Leave type as null for now,
	Also skip if private.

2014-06-30  Per Bothner  <per@bothner.com>

	* PrimType.java (convertToRaw): New method.

2014-06-25  Per Bothner  <per@bothner.com>

	* Method.java (rmethod): Change type to AccessibleObject.

2014-06-25  Per Bothner  <per@bothner.com>

	* Field.java (getAnnotation): New method.
	* Method.java (rmethod): New field.
	(getAnnotation): New method.
	* ClassType.java (AddField): New convenience method.
	It also sets rfield.
	(addField): Use it.
	(addMethod): Set Method's rmethod field.
	* RuntimeAnnotationsAttr.java (getAnnotation *2): New methods.

	* ArrayType.java (getRawType): New method.

2014-06-16  Per Bothner  <per@bothner.com>

	* SwitchState.java: Various fixes, mainly becase fixupChain
	doesn't attempt to manage and propagate type-states.

2014-04-18  Per Bothner  <per@bothner.com>

	* CodeAttr.java (disAssembleWithFixups): Fix some logic bugs,
	most critically in handling of FIXUP_CASE.
	(processFixups): Add commented-out call to disAssembleWithFixups.

	Support new Java8 constant pool entry types.